Fix grading spinner colour on dark mode

--- a/resources/submission.scss
+++ b/resources/submission.scss
@@ -91,6 +91,10 @@
         .score {
             font-size: 1.3em;
 			font-weight: bold;
+
+            .grading-spinner {
+                color: $color_primary100;
+            }
         }
     }
 
